fix: project preview overflowing now shifts to new row

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,22 +83,24 @@ body
 /* Grid class to be used alongside grid layouts*/
 .grid
 {
-    display: grid;
+    display: grid;    
+}
+
+.auto-fit
+{
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 /* Grid layouts */
 .main-container
 {
     min-height: 100vh;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: auto 1fr;
 }
 
 .column-container
 {
-    grid-auto-flow: column;
-    grid-auto-rows: 0fr;
-
     > div 
     {
         border: 1px solid var(--color-accent);
